# postech_tc1

./: .gitignore  README.md  pyproject.toml
src/postech_tc1/: config.py  main.py
src/postech_tc1/api/models/: enums.py  response.py
src/postech_tc1/api/routes/: auth.py  comercializacao.py  exportacao.py  importacao.py  processamento.py  producao.py  protected.py
src/postech_tc1/api/services/: auth_service.py  embrapa_scraper.py
src/postech_tc1/api/utils/: embrapa_cache.py  jwt_handler.py  options.py
